# third_party_mindspore

./: .gitignore  BUILD.gn  OAT.xml  README_CN.md  build_helper.py  bundle.json
patches/: 0001-generate-schema-headers-manually.patch  0002-generate-nnacl-simd-headers-manually.patch  0003-implement-mindir-module-and-support-nnrt-delegate.patch  0005-mindir-add-custom-op.patch  0006-Support-converting-THIRDPARTY-model-in-MSLite.patch  0007-support-third-party-model-in-mslite-runtime.patch  0008-add-js-api.patch  0009-adapt-nnrt-v2_0.patch
