# Copyright 2022 Huawei Technologies Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ============================================================================

import("//build/ohos.gni")

# Prepare source at first.
in_zip_path = rebase_path("./mindspore-v1.8.1.zip", root_build_dir)
out_src_path = rebase_path("./mindspore-src", root_build_dir)
patch_dir = rebase_path("./patches/", root_build_dir)

args = []
args += [
  "--in_zip_path",
  in_zip_path,
]
args += [
  "--out_src_path",
  out_src_path,
]
args += [
  "--patch_dir",
  patch_dir,
]
print(args)

exec_script("build_helper.py", args)
print("Done prepare mindspore source.")

# Define targets
ohos_group("mindspore-all") {
  deps = [ "mindspore-src/source/mindspore/lite/:mindspore" ]
}

ohos_group("mindir") {
  deps = [ "mindspore-src/source/mindspore/lite/mindir:mindir_lib" ]
}
